# xipe-oito

./: Cargo.toml  Makefile  README.md
emerson/: Cargo.toml  snake.ch8
emerson/src/: application.rs  main.rs
emerson/src/application/: audio.rs  grid.rs
lake/: .gitignore  Cargo.toml  Makefile  index.html
lake/last_build/: index-40801960b215e0b0.js  index-40801960b215e0b0_bg.wasm  index-b48d669f41a78af8_bg.wasm  index-f8f4daaa416d3801.js  index-f8f4daaa416d3801_bg.wasm  index.html
lake/src/: application.rs  main.rs
lake/src/application/: audio.rs  button.rs  buttons.rs  grid.rs  mod.rs
palmer/: Cargo.toml
palmer/src/: audio.rs  display.rs  fontset.rs  input.rs  instructions.rs  lib.rs  processor.rs
src/: lib.rs  main.rs
src/xipe/: chip_8.rs  display.rs  fontset.rs  input.rs  instructions.rs  mod.rs  processor.rs
