[package]
name = "palmer"
version = "0.1.0"
authors = ["Celso Bonutti Filho <celso.bonuttif@gmail.com>"]
edition = "2018"
description = "Chip8 engine written for a personal project"
license = "MIT"

[dependencies]
byteorder = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = {version = "0.7.3"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = {version = "0.3.45"}
wasm-bindgen = {version = "0.2.68"}
